--- a/DESAFIOS/d011/estilos/style.css
+++ b/DESAFIOS/d011/estilos/style.css
@@ -1,1 +1,16 @@
 @charset "UTF-8"
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body {
+    min-height: 100vh;
+    background-color: aliceblue;
+}
+
+header {
+    background-color: black;
+    color: white;
+    text-align: center; 
+}
