--- a/DESAFIOS/d011/estilos/style.css
+++ b/DESAFIOS/d011/estilos/style.css
@@ -1,4 +1,5 @@
-@charset "UTF-8"
+@charset "UTF-8";
+
 *{
     margin: 0px;
     padding: 0px;
@@ -6,11 +7,61 @@
 
 html, body {
     min-height: 100vh;
-    background-color: aliceblue;
+    background-color: rgb(18, 82, 138);
 }
 
 header {
     background-color: black;
     color: white;
     text-align: center; 
+} 
+
+header > h1 {
+    padding-top: 50px;
+}
+
+header > nav {
+    color: white;
+    padding-bottom: 50px;
+}
+
+header a, footer a {
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
+header a:hover, footer a:hover {
+ text-decoration: underline;
+}
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 30px;
+    line-height: 2em;
+
+}
+
+section.normal {
+    background-color: white;
+    color: black;
+}
+
+section.imagem {
+    background-color: rgb(59, 53, 53);
+    color: white;
+}
+
+section.imagem > p {
+    width: 400px;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.315);
+}
+
+footer {
+    background-color: black;
+    color: white;
+    padding: 10px;
+    text-align: center;
 }
