--- a/DESAFIOS/d011/estilos/style.css
+++ b/DESAFIOS/d011/estilos/style.css
@@ -1,9 +1,29 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Vollkorn:ital@0;1&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Vollkorn:ital@0;1&display=swap');
+
+@font-face {
+    font-family: Bright;
+    src: url(Bright\ DEMO.otf) format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+ :root {
+    --fonte1: 'Vollkorn', serif;
+    --fonte2: 'La Belle Aurore', cursive;
+    --fonte3: 'Bright'
+
+}
+
 *{
     margin: 0px;
     padding: 0px;
 }
+
+
 
 html, body {
     min-height: 100vh;
@@ -17,12 +37,16 @@ header {
 } 
 
 header > h1 {
-    padding-top: 50px;
+    padding-top: 100px;
+    font-family: var(--fonte3);
+    font-weight: normal;
+    font-size: 20vh;
 }
 
 header > nav {
     color: white;
-    padding-bottom: 50px;
+    padding-bottom: 20px;
+    font-family: var(--fonte1);
 }
 
 header a, footer a {
@@ -36,11 +60,19 @@ header a:hover, footer a:hover {
 }
 
 section {
+    font-family: var(--fonte1);
+    font-size: 5vh;
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
     line-height: 2em;
 
+}
+
+article {
+    font-family: var(--fonte2);
+    font-weight: lighter;
+    font-size: 1.5em;
 }
 
 section.normal {
@@ -53,7 +85,7 @@ section.imagem {
     color: white;
 }
 
-section.imagem > p {
+section.imagem > p, article {
     width: 400px;
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.315);
