--- a/DESAFIOS/d011/estilos/style.css
+++ b/DESAFIOS/d011/estilos/style.css
@@ -44,7 +44,7 @@ header > h1 {
 }
 
 header > nav {
-    color: white;
+    color: rgb(255, 255, 255);
     padding-bottom: 20px;
     font-family: var(--fonte1);
 }
