--- a/EXERCICÍOS/ex026/mq002/estilo/style.css
+++ b/EXERCICÍOS/ex026/mq002/estilo/style.css
@@ -1,3 +1,23 @@
 @charset "UTF-8";
 
 /*Estilo geral all*/
+
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    padding: 10px;
+    text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.185);
+}
