--- a/EXERCICÍOS/ex026/mq004/estilo/media-query.css
+++ b/EXERCICÍOS/ex026/mq004/estilo/media-query.css
@@ -1,3 +1,67 @@
 @charset "UTF-8";
 
 /*Todas as medias*/
+
+/* Typical Device Breakpoints
+    telas pequenas: até 600px
+    celular: de 600px até 768px
+    tablet: de 768px até 992px
+    desktop: de 992px até 1200px
+    grande telas: acima de 1200px */
+
+@media print {  /*IMPRESSÃO*/ /*desnecessário poi o background não dá para imprimir*/
+
+    body, main {
+        font-family: 'Courier New', Courier, monospace;
+        color: black;
+    }
+
+    img#phone { display: none;}
+    img#tablet {display: none;}
+    img#print {display: block;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) { /*TABLET*/
+
+    body{
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+
+    img#phone { display: none;}
+    img#tablet {display: block;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) { /*DESKTOP*/
+
+    body {
+        background-image: url(../imagens/back-pc.jpg);
+    }
+
+    img#phone { display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: block;}
+    img#tv {display: none;}
+}
+
+@media screen and (min-width: 1200px) { /*GRANDE TELAS*/
+
+    body{
+        background-image: url(../imagens/back-tv.jpg);
+    }
+
+    img#phone { display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: block;}
+
+}
+    
