--- a/EXERCICÍOS/ex027/estilo/mobile.css
+++ b/EXERCICÍOS/ex027/estilo/mobile.css
@@ -46,3 +46,7 @@ section#login > div#imagem {
     background-size: cover;
     height: 200px;
 }
+
+section#login > div#formulario {
+    padding: 15px;
+}
