--- a/EXERCICÍOS/ex027/estilo/media-query.css
+++ b/EXERCICÍOS/ex027/estilo/media-query.css
@@ -1,3 +1,44 @@
 @charset "UTF-8";
 
-/*Media queries*/
+/*Media queries
+--------------------------
+Types Device Breakpoints
+- Pquenas telas: 600px
+- Celulares: 600px até 768px
+- Tablets: 768px até 992px
+- Desktop: 992px até 1200px
+- Grandes tela: acima de 1200px */
+
+@media screen and (min-width: 768px) and (max-width: 992px) { /*Tablet*/
+    section#login {
+        width: 90vw;
+    }
+
+    section#login > div#imagem {
+        float: left;
+        width: 40%;
+        height: 100%;
+    }
+
+    section#login > div#formulario {
+        float: right;
+        width: 60%;
+    }
+}
+
+@media screen and (min-width: 922px) and (max-width: 1200px) {
+    section#login {
+        width: 90vw;
+    }
+
+    section#login > div#imagem {
+        float: left;
+        width: 40%;
+        height: 100%;
+    }
+
+    section#login > div#formulario {
+        float: right;
+        width: 60%;
+    }
+}
