--- a/EXERCICÍOS/ex027/estilo/media-query.css
+++ b/EXERCICÍOS/ex027/estilo/media-query.css
@@ -28,17 +28,19 @@ Types Device Breakpoints
 
 @media screen and (min-width: 922px)  {
     section#login {
-        width: 90vw;
+        width: 80vw;
     }
 
     section#login > div#imagem {
         float: left;
-        width: 40%;
+        width: 70%;
         height: 100%;
     }
 
     section#login > div#formulario {
         float: right;
-        width: 60%;
+        width: 30%;
+        padding: 30px;
+        font-size: 1.3em;
     }
 }
