--- a/EXERCICÍOS/ex027/estilo/mobile.css
+++ b/EXERCICÍOS/ex027/estilo/mobile.css
@@ -59,3 +59,42 @@ section#login > div#formulario {
     padding: 15px;
 }
 
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    color:white ;
+    width: 100%;
+    height: 35px;
+    margin-top: 20px;
+    background-color: #7a9645 ;
+    border: solid 1px  #3d501bb9;
+    border-radius: 20px;
+}
+
+input[type=submit]:hover{
+    background-color: #5b682e;
+    color: white;
+    font-weight: bold;
+}
+
+form > a.botao {
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    font-size: 1em;
+    color: #202c0b77;
+    width: 100%;
+    height: 35px;
+    background-color:  #96ad69;
+    margin-top: 10px;
+    padding: 5px;
+    border: solid 1px #3d501bb9;
+    border-radius: 20px;
+
+}
+
+a.botao:hover {
+    background-color: #5b682e;
+    color: white ;
+    font-weight: bold;
+}
