--- a/EXERCICÍOS/ex027/estilo/mobile.css
+++ b/EXERCICÍOS/ex027/estilo/mobile.css
@@ -41,11 +41,15 @@ section#login {
     border-radius: 20px;
     box-shadow: 5px 3px 10px rgba(0, 0, 0, 0.247);
 
+    color: #202c0b60;
+
     transition: width .3s height .3s;
     transition-timing-function: ease ;
 }
 
-
+section#login > div#formulario > h1 {
+    color:#f4ffdf;
+}
 
 section#login > div#imagem {
     display: block;
@@ -57,6 +61,34 @@ section#login > div#imagem {
 section#login > div#formulario {
     display: block;
     padding: 15px;
+}
+
+form > div.campo {
+    background-color: #96ad69f8;
+    width: 100%;
+    height: 35px;
+    border: 2px solid #96ad69f8;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > span {
+    color: white;
+    font-size: 2em;
+    width: 35px;
+    height: 35px;
+    padding: px;
+}
+
+div.campo > input {
+    background-color: #c7d4ab;
+    font-size: 1em;
+    text-align: center;
+    width:calc(100% - 50px);
+    height: 100%;
+    transform: translateY(-10px);
+    border: none;
+    border-radius: 5px;
 }
 
 form > input[type=submit] {
@@ -85,7 +117,7 @@ form > a.botao {
     color: #202c0b77;
     width: 100%;
     height: 35px;
-    background-color:  #96ad69;
+    background-color: #96ad69;
     margin-top: 10px;
     padding: 5px;
     border: solid 1px #3d501bb9;
